name:                samontea
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/samontea/samontea.github.io
license:             BSD3
license-file:        LICENSE
author:              Samuel Mercier
maintainer:          sam [at] mrcr [dot] us
copyright:           2020 Samuel Mercier
category:            Web
build-type:          Simple
extra-source-files:  README.org
cabal-version:       >=1.10

executable samontea
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll
